# bhume-boundary-assignment

./: .gitattributes  .gitignore  README.md  RUN_STEPS.md  SESSION_HANDOFF.md  VIDEO_SCRIPT.md  pyproject.toml  requirements.txt
data/: download_manifest.json
data/outputs/: final-site-constraint-audit.json  robust-check-strict-manifest.json  robust-check-vadner-manifest.json  site-upload-audit.json  site-workflow-upload-audit.json
data/outputs/ablation/: summary.json
data/outputs/final/malatavadi/: manifest.json  score.json
data/outputs/final/vadner/: manifest.json  score.json
data/outputs/malatavadi/: manifest.json  score.json
data/outputs/review-panels/malatavadi/: index.json
data/outputs/review-panels/vadner/: index.json
data/outputs/vadnerbhairav/: manifest.json
data/outputs/validation/godmode-malatavadi-balanced/: manifest.json
data/raw/: download_manifest.json
scripts/: preset_sweep.py  run_workflow.py
src/bhume/: __init__.py  cli.py  config.py  deps.py  download.py  geometry.py  io_utils.py  scorer.py  solver.py  validate.py
tools/: audit_assignment_site.mjs  check_submission_contract.py  last_audit.json  render_review_panels.py  run_ablation_report.py  visible_video_walkthrough.cjs
transcripts/: README.md  ai-planning-notes.md  reconstructed-ai-workflow-log.md  transcript-session-1.md
transcripts/raw/: SHA256SUMS.txt  raw-transcript-bhume-2026-06-11.jsonl  raw-transcript-bhume-2026-06-11.md  rollout-2026-06-11T11-39-58-019eb54d-3b30-7c82-82f7-79570ef5ea7b.jsonl
video/: teleprompter.html  walkthrough-script.md
(+29 files in other folders)
