[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bhume-boundary-assignment"
version = "0.1.0"
description = "Reproducible pipeline for the BhuMe boundary take-home assignment"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bhume = "bhume.cli:main"

